--- a/Data Collection/AgriWeather.ipynb
+++ b/Data Collection/AgriWeather.ipynb
@@ -6,17 +6,32 @@
    "metadata": {},
    "source": [
     "# AgriWeather\n",
-    "- Data Source : [농촌진흥청 국립농업과학원_농업기상 기본 관측데이터 조회](https://www.data.go.kr/data/15078057/openapi.do)\n",
     "\n",
-    "- Data Format : XML\n",
+    "## 관측지점정보\n",
     "\n",
-    "- 농업기상 관측데이터 (기온, 습도, 풍향, 풍속, 강수량, 일조시간, 일사량 등)을 정보를 제공합니다.\n",
+    "- Data Source : [관측지점정보 - 농업기상정보](https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUKEwjh9Iz52I38AhVDEIgKHWFJDNMQFnoECA4QAQ&url=http%3A%2F%2Fweather.rda.go.kr%2Fw%2Fweather%2FobservationInfo.do&usg=AOvVaw2YyGtn4LBYHLzmmtv-AsXB)\n",
     "\n",
-    "- 관측지점명, 관측지점코드, 조회일자, 조회월, 조회년, 조회기간을 조건으로 조회할 수 있습니다. (10분, 시간, 일, 월, 순, 반순)\n",
+    "- Collection Method : Download\n",
+    "\n",
+    "- Data Format : CSV\n",
+    "\n",
+    "### 데이터 설명\n",
+    "- '**농업기상 기본 관측데이터 조회**'에 활용할 '**관측지점코드**'를 얻기 위함.\n",
     "\n",
     "\n",
     "---\n",
-    "## 요청변수(Request Parameter)\n",
+    "## 농촌진흥청 국립농업과학원_농업기상 기본 관측데이터 조회\n",
+    "- Data Source : [농촌진흥청 국립농업과학원_농업기상 기본 관측데이터 조회](https://www.data.go.kr/data/15078057/openapi.do) → 농업기상 조회년도별 일 기본 관측데이터\n",
+    "\n",
+    "- Collection Method : API\n",
+    "\n",
+    "- Data Format : XML\n",
+    "\n",
+    "\n",
+    "### 데이터 설명\n",
+    "- 농업기상 관측데이터 (**기온, 습도, 풍향, 풍속, 강수량, 일조시간, 일사량 등**)을 정보를 제공합니다.\n",
+    "\n",
+    "### 요청변수(Request Parameter)\n",
     "|항목명(국문)|항목명(영문)|항목크기|항목구분|샘플데이터|항목설명|\n",
     "|-|-|-|-|-|-|\n",
     "|인증키|serviceKey|100|필|인증키|공공데이터포털에서 발급받은 인증키|\n",
@@ -26,7 +41,7 @@
     "|관측지점코드|obsr_Spot_Code|10|필|210852A001|관측지점코드|\n",
     "\n",
     "\n",
-    "## 출력결과(Response Element)\n",
+    "### 출력결과(Response Element)\n",
     "|항목명(국문)|항목명(영문)|항목크기|항목구분|샘플데이터|항목설명|\n",
     "|-|-|-|-|-|-|\n",
     "|결과코드|result_Code|3|필|200|결과코드|\n",
@@ -55,8 +70,19 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 회고\n",
+    "\n",
+    "- **농업기상 기본 관측데이터 조회**'에 활용할 '**관측지점코드**'를 구하는 것이 어려웠다.\n",
+    "    - API에서 제공하는 모든 관측지점의 '**관측지점코드**'를 얻지 못하였다."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,13 +105,13 @@
     "import xmltodict\n",
     "\n",
     "\n",
-    "sys.path.append(\"../import\")\n",
+    "sys.path.append(\"../Import\")\n",
     "import auth"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -161,39 +187,12 @@
        "item       3.2     4.9  210852A001  강릉시 연곡면   11.6      531  1.4  259.8  3.8  "
       ]
      },
-     "execution_count": 43,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "authkey = r\"\"\"b8m/px7AI1NzkWN/lcRj9uXgO56otbz7ZIBfXcplZtC7kmPv1qdNbWD9koAjSQp6t+eo2JJPcn+FiGNuklo98A==\"\"\"\n",
-    "url = \"http://apis.data.go.kr/1390802/AgriWeather/WeatherObsrInfo/GnrlWeather/getWeatherYearDayList\"\n",
-    "params = {\n",
-    "    \"serviceKey\": authkey,\n",
-    "    \"Page_Size\": 20,\n",
-    "    \"search_Year\": 2020,\n",
-    "    \"obsr_Spot_Code\": \"210852A001\",\n",
-    "}\n",
-    "\n",
-    "response = requests.get(url, params=params)\n",
-    "if response.status_code == 200:\n",
-    "    soup = BeautifulSoup(response.text, \"xml\")\n",
-    "    s = soup.find(\"item\")\n",
-    "\n",
-    "    parsed_dict = xmltodict.parse(str(s))\n",
-    "    test = pd.DataFrame(parsed_dict).T\n",
-    "\n",
-    "test"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def Get_AgriWeather_1(\n",
+    "def Get_AgriWeather(\n",
     "        authkey = r\"\"\"b8m/px7AI1NzkWN/lcRj9uXgO56otbz7ZIBfXcplZtC7kmPv1qdNbWD9koAjSQp6t+eo2JJPcn+FiGNuklo98A==\"\"\",\n",
     "        url = \"http://apis.data.go.kr/1390802/AgriWeather/WeatherObsrInfo/GnrlWeather/getWeatherYearDayList\",\n",
     "        tag = \"item\",\n",
@@ -205,6 +204,7 @@
     "        }\n",
     "    ) -> None:\n",
     "\n",
+    "    time.sleep(0.2)\n",
     "    response = requests.get(url, params=params)\n",
     "    if response.status_code == 200:\n",
     "        soup = BeautifulSoup(response.text, \"xml\")\n",
@@ -212,7 +212,146 @@
     "\n",
     "        parsed_dict = xmltodict.parse(str(s))\n",
     "    \n",
-    "    return pd.DataFrame(parsed_dict).T"
+    "    return pd.DataFrame(parsed_dict).T\n",
+    "\n",
+    "display(Get_AgriWeather())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>condens_Time</th>\n",
+       "      <th>date</th>\n",
+       "      <th>gr_Temp</th>\n",
+       "      <th>hum</th>\n",
+       "      <th>max_Temp</th>\n",
+       "      <th>min_Temp</th>\n",
+       "      <th>no</th>\n",
+       "      <th>rain</th>\n",
+       "      <th>soil_Temp</th>\n",
+       "      <th>soil_Wt</th>\n",
+       "      <th>stn_Code</th>\n",
+       "      <th>stn_Name</th>\n",
+       "      <th>sun_Qy</th>\n",
+       "      <th>sun_Time</th>\n",
+       "      <th>temp</th>\n",
+       "      <th>widdir</th>\n",
+       "      <th>wind</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>item</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2018-01-01 13:00</td>\n",
+       "      <td>4.4</td>\n",
+       "      <td>33.3</td>\n",
+       "      <td>1.8</td>\n",
+       "      <td>-12.9</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-0.3</td>\n",
+       "      <td>20.6</td>\n",
+       "      <td>209802A001</td>\n",
+       "      <td>화천군 화천읍</td>\n",
+       "      <td>5.5</td>\n",
+       "      <td>213.0</td>\n",
+       "      <td>1.7</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     condens_Time              date gr_Temp   hum max_Temp min_Temp no rain  \\\n",
+       "item          0.0  2018-01-01 13:00     4.4  33.3      1.8    -12.9  1  0.0   \n",
+       "\n",
+       "     soil_Temp soil_Wt    stn_Code stn_Name sun_Qy sun_Time temp widdir wind  \n",
+       "item      -0.3    20.6  209802A001  화천군 화천읍    5.5    213.0  1.7    0.0  0.0  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "def Get_ObsrSpotCode(\n",
+    "        authkey = r\"\"\"b8m/px7AI1NzkWN/lcRj9uXgO56otbz7ZIBfXcplZtC7kmPv1qdNbWD9koAjSQp6t+eo2JJPcn+FiGNuklo98A==\"\"\",\n",
+    "        url = \"http://apis.data.go.kr/1390802/AgriWeather/WeatherObsrInfo/GnrlWeather/getWeatherTenMinList\",\n",
+    "        tag = \"item\",\n",
+    "        params ={\n",
+    "            'serviceKey' : authkey, \n",
+    "            'Page_No' : '1', \n",
+    "            'Page_Size' : '1', \n",
+    "            'date' : '2018-01-01', \n",
+    "            'time' : '1300', \n",
+    "            # 'obsr_Spot_Nm' : '가평군 가평읍', \n",
+    "            'obsr_Spot_Code' : '209802A001'\n",
+    "            }\n",
+    "    ) -> None:\n",
+    "\n",
+    "    time.sleep(0.2)\n",
+    "    response = requests.get(url, params=params)\n",
+    "    if response.status_code == 200:\n",
+    "        soup = BeautifulSoup(response.text, \"xml\")\n",
+    "        s = soup.find(tag)\n",
+    "\n",
+    "        parsed_dict = xmltodict.parse(str(s))\n",
+    "    \n",
+    "    return pd.DataFrame(parsed_dict).T\n",
+    "\n",
+    "display(Get_ObsrSpotCode())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "Excel file format cannot be determined, you must specify an engine manually.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [26], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m df \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39;49mread_excel(\u001b[39m\"\u001b[39;49m\u001b[39m관측지점정보.xls\u001b[39;49m\u001b[39m\"\u001b[39;49m)\n\u001b[0;32m      2\u001b[0m df\u001b[39m.\u001b[39mhead()\n",
+      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python310\\site-packages\\pandas\\util\\_decorators.py:211\u001b[0m, in \u001b[0;36mdeprecate_kwarg.<locals>._deprecate_kwarg.<locals>.wrapper\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m    209\u001b[0m     \u001b[39melse\u001b[39;00m:\n\u001b[0;32m    210\u001b[0m         kwargs[new_arg_name] \u001b[39m=\u001b[39m new_arg_value\n\u001b[1;32m--> 211\u001b[0m \u001b[39mreturn\u001b[39;00m func(\u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)\n",
+      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python310\\site-packages\\pandas\\util\\_decorators.py:317\u001b[0m, in \u001b[0;36mdeprecate_nonkeyword_arguments.<locals>.decorate.<locals>.wrapper\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m    311\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mlen\u001b[39m(args) \u001b[39m>\u001b[39m num_allow_args:\n\u001b[0;32m    312\u001b[0m     warnings\u001b[39m.\u001b[39mwarn(\n\u001b[0;32m    313\u001b[0m         msg\u001b[39m.\u001b[39mformat(arguments\u001b[39m=\u001b[39marguments),\n\u001b[0;32m    314\u001b[0m         \u001b[39mFutureWarning\u001b[39;00m,\n\u001b[0;32m    315\u001b[0m         stacklevel\u001b[39m=\u001b[39mfind_stack_level(inspect\u001b[39m.\u001b[39mcurrentframe()),\n\u001b[0;32m    316\u001b[0m     )\n\u001b[1;32m--> 317\u001b[0m \u001b[39mreturn\u001b[39;00m func(\u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)\n",
+      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python310\\site-packages\\pandas\\io\\excel\\_base.py:483\u001b[0m, in \u001b[0;36mread_excel\u001b[1;34m(io, sheet_name, header, names, index_col, usecols, squeeze, dtype, engine, converters, true_values, false_values, skiprows, nrows, na_values, keep_default_na, na_filter, verbose, parse_dates, date_parser, thousands, decimal, comment, skipfooter, convert_float, mangle_dupe_cols, storage_options)\u001b[0m\n\u001b[0;32m    481\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39misinstance\u001b[39m(io, ExcelFile):\n\u001b[0;32m    482\u001b[0m     should_close \u001b[39m=\u001b[39m \u001b[39mTrue\u001b[39;00m\n\u001b[1;32m--> 483\u001b[0m     io \u001b[39m=\u001b[39m ExcelFile(io, storage_options\u001b[39m=\u001b[39;49mstorage_options, engine\u001b[39m=\u001b[39;49mengine)\n\u001b[0;32m    484\u001b[0m \u001b[39melif\u001b[39;00m engine \u001b[39mand\u001b[39;00m engine \u001b[39m!=\u001b[39m io\u001b[39m.\u001b[39mengine:\n\u001b[0;32m    485\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\n\u001b[0;32m    486\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mEngine should not be specified when passing \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    487\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39man ExcelFile - ExcelFile already has the engine set\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    488\u001b[0m     )\n",
+      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python310\\site-packages\\pandas\\io\\excel\\_base.py:1633\u001b[0m, in \u001b[0;36mExcelFile.__init__\u001b[1;34m(self, path_or_buffer, engine, storage_options)\u001b[0m\n\u001b[0;32m   1629\u001b[0m     ext \u001b[39m=\u001b[39m inspect_excel_format(\n\u001b[0;32m   1630\u001b[0m         content_or_path\u001b[39m=\u001b[39mpath_or_buffer, storage_options\u001b[39m=\u001b[39mstorage_options\n\u001b[0;32m   1631\u001b[0m     )\n\u001b[0;32m   1632\u001b[0m     \u001b[39mif\u001b[39;00m ext \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m-> 1633\u001b[0m         \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\n\u001b[0;32m   1634\u001b[0m             \u001b[39m\"\u001b[39m\u001b[39mExcel file format cannot be determined, you must specify \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m   1635\u001b[0m             \u001b[39m\"\u001b[39m\u001b[39man engine manually.\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m   1636\u001b[0m         )\n\u001b[0;32m   1638\u001b[0m engine \u001b[39m=\u001b[39m config\u001b[39m.\u001b[39mget_option(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mio.excel.\u001b[39m\u001b[39m{\u001b[39;00mext\u001b[39m}\u001b[39;00m\u001b[39m.reader\u001b[39m\u001b[39m\"\u001b[39m, silent\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m)\n\u001b[0;32m   1639\u001b[0m \u001b[39mif\u001b[39;00m engine \u001b[39m==\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mauto\u001b[39m\u001b[39m\"\u001b[39m:\n",
+      "\u001b[1;31mValueError\u001b[0m: Excel file format cannot be determined, you must specify an engine manually."
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.read_excel(\"관측지점정보.xls\")\n",
+    "df.head()"
    ]
   }
  ],
