--- a/Data Collection/AgriWeather.ipynb
+++ b/Data Collection/AgriWeather.ipynb
@@ -87,13 +87,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['no',\n",
+       " 'stn_Code',\n",
+       " 'stn_Name',\n",
+       " 'date',\n",
+       " 'temp',\n",
+       " 'max_Temp',\n",
+       " 'min_Temp',\n",
+       " 'hum',\n",
+       " 'widdir',\n",
+       " 'wind',\n",
+       " 'rain',\n",
+       " 'sun_Time',\n",
+       " 'sun_Qy',\n",
+       " 'condens_Time',\n",
+       " 'gr_Temp',\n",
+       " 'soil_Temp',\n",
+       " 'soil_Wt']"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# import os\n",
     "# import glob\n",
     "import time\n",
+    "\n",
     "# from pprint import pprint\n",
     "\n",
     "import numpy as np\n",
@@ -112,31 +140,32 @@
     "\n",
     "# 'auth' is included in gitignore.\n",
     "import sys\n",
+    "\n",
     "sys.path.append(\"../Import\")\n",
     "import auth\n",
-    "authkey = auth.authkey[\"AgriWeather\"]\n",
+    "\n",
+    "authkey = auth.authkey[\"AgriWeather_dec\"]\n",
     "\n",
     "\n",
     "dfname = {\n",
     "    \"no\": \"No\",\n",
     "    \"stn_Code\": \"ObserveSpot_Code\",\n",
     "    \"stn_Name\": \"ObserveSpot_Name\",\n",
-    "    \"date\":\t\"Date\",\n",
+    "    \"date\": \"Date\",\n",
     "    \"temp\": \"Temp\",\n",
     "    \"max_Temp\": \"Max_Temp\",\n",
     "    \"min_Temp\": \"Min_Temp\",\n",
-    "    \"hum\":'humidity',\n",
-    "    \"widdir\":'Wind_Direction',\n",
-    "    \"wind\":'Wind_Speed',\n",
-    "    \"rain\":'Rainfall',\n",
-    "    \"sun_Time\":'Sun_Time',\n",
-    "    \"sun_Qy\":'Sun_Quantity',\n",
+    "    \"hum\": \"humidity\",\n",
+    "    \"widdir\": \"Wind_Direction\",\n",
+    "    \"wind\": \"Wind_Speed\",\n",
+    "    \"rain\": \"Rainfall\",\n",
+    "    \"sun_Time\": \"Sun_Time\",\n",
+    "    \"sun_Qy\": \"Sun_Quantity\",\n",
     "    \"condens_Time\": \"Condens_Time\",\n",
-    "    \"gr_Temp\":  'Grass_Temp',\n",
+    "    \"gr_Temp\": \"Grass_Temp\",\n",
     "    \"soil_Temp\": \"Soil_Temp\",\n",
-    "    \"soil_Wt\": \"Soil_Moisture_CorrValue\"\n",
-    "    }\n",
-    "\n",
+    "    \"soil_Wt\": \"Soil_Moisture_CorrValue\",\n",
+    "}\n",
     "\n",
     "list(dfname.keys())"
    ]
@@ -148,14 +177,20 @@
    "source": [
     "# 지점명 → 지점코드\n",
     "\n",
-    "- <u>**지점명 → 지점코드**</u> → 농업기상정보\n",
-    "\n",
-    "- 관측지점 목록 만들기\n"
+    "- <u>**지점명 → 지점코드**</u> → 농업기상정보"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 관측지점 목록 만들기"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -452,23 +487,31 @@
     "\n",
     "# 전처리\n",
     "df_ObsrSpot[\"도명+지점명\"] = df_ObsrSpot[\"도명\"] + \" \" + df_ObsrSpot[\"지점명\"]\n",
-    "df_ObsrSpot = df_ObsrSpot.drop(columns=[\"도명\", '위도', '경도', '고도', \"관측시작일\"])\n",
+    "df_ObsrSpot = df_ObsrSpot.drop(columns=[\"도명\", \"위도\", \"경도\", \"고도\", \"관측시작일\"])\n",
     "\n",
     "# 컬럼 순서 변경\n",
     "# df_ObsrSpot.columns.to_list()\n",
     "# ['지점명', '지점코드', '위도', '경도', '고도', '설치주소', '도명+지점명']\n",
-    "df_ObsrSpot = df_ObsrSpot[['도명+지점명', '지점명', '설치주소', '지점코드']]\n",
+    "df_ObsrSpot = df_ObsrSpot[[\"도명+지점명\", \"지점명\", \"설치주소\", \"지점코드\"]]\n",
     "\n",
     "print(\"\\n┌▣ 'df_ObsrSpot'의 raw에서 전처리\")\n",
     "display(df_ObsrSpot.head())\n",
     "\n",
     "print(\"\\n┌▣ '도명+지점명'과 '지점명'의 중복 여부 확인 (중복값이 없어야함)\")\n",
-    "display(df_ObsrSpot.describe(include = \"O\"))"
+    "display(df_ObsrSpot.describe(include=\"O\"))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Get_ObsrSpotCode"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -477,7 +520,7 @@
        "'464030A001'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -485,20 +528,24 @@
    "source": [
     "def Get_ObsrSpotCode(dataframe, obsr_Spot_Name) -> str:\n",
     "\n",
-    "    '''\n",
-    "    매개변수 'dataframe'에서 column '도명+지점명', '지점명', '설치주소' 중에서 \n",
+    "    \"\"\"\n",
+    "    매개변수 'dataframe'에서 column '도명+지점명', '지점명', '설치주소' 중에서\n",
     "    매개변수 'obsr_Spot_Name'과 일치하는 row의 '지점코드'column의 value를 반환하는 함수\n",
-    "    '''\n",
+    "    \"\"\"\n",
     "\n",
     "    # [0] - '도명+지점명'과 '지점명'의 중복 여부 확인했을 때, 중복이 없다는 전제로 슬라이싱을 활용함.\n",
     "\n",
-    "    r = dataframe[(dataframe[\"도명+지점명\"] == obsr_Spot_Name) |(dataframe[\"지점명\"] == obsr_Spot_Name) | (dataframe[\"설치주소\"] == obsr_Spot_Name)][\"지점코드\"]\n",
+    "    r = dataframe[\n",
+    "        (dataframe[\"도명+지점명\"] == obsr_Spot_Name)\n",
+    "        | (dataframe[\"지점명\"] == obsr_Spot_Name)\n",
+    "        | (dataframe[\"설치주소\"] == obsr_Spot_Name)\n",
+    "    ][\"지점코드\"]\n",
     "\n",
     "    return r.values[0]\n",
     "\n",
     "\n",
     "# fnc test\n",
-    "Get_ObsrSpotCode(dataframe=df_ObsrSpot, obsr_Spot_Name = \"광주시 목현동\")"
+    "Get_ObsrSpotCode(dataframe=df_ObsrSpot, obsr_Spot_Name=\"광주시 목현동\")"
    ]
   },
   {
@@ -513,26 +560,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndexError",
-     "evalue": "list index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [61], line 10\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[39mif\u001b[39;00m response\u001b[39m.\u001b[39mstatus_code \u001b[39m==\u001b[39m \u001b[39m200\u001b[39m:\n\u001b[0;32m      9\u001b[0m     soup \u001b[39m=\u001b[39m BeautifulSoup(response\u001b[39m.\u001b[39mtext, \u001b[39m\"\u001b[39m\u001b[39mxml\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m---> 10\u001b[0m     soup \u001b[39m=\u001b[39m soup\u001b[39m.\u001b[39;49mfind_all(\u001b[39m\"\u001b[39;49m\u001b[39mitem\u001b[39;49m\u001b[39m\"\u001b[39;49m)[\u001b[39m0\u001b[39;49m]\n\u001b[0;32m     12\u001b[0m     parsed_dict \u001b[39m=\u001b[39m xmltodict\u001b[39m.\u001b[39mparse(\u001b[39mstr\u001b[39m(soup))\n\u001b[0;32m     14\u001b[0m display(pd\u001b[39m.\u001b[39mDataFrame(parsed_dict)\u001b[39m.\u001b[39mT\u001b[39m.\u001b[39mreset_index(drop\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m))\n",
-      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>condens_Time</th>\n",
+       "      <th>date</th>\n",
+       "      <th>gr_Temp</th>\n",
+       "      <th>hum</th>\n",
+       "      <th>max_Temp</th>\n",
+       "      <th>min_Temp</th>\n",
+       "      <th>no</th>\n",
+       "      <th>rain</th>\n",
+       "      <th>soil_Temp</th>\n",
+       "      <th>soil_Wt</th>\n",
+       "      <th>stn_Code</th>\n",
+       "      <th>stn_Name</th>\n",
+       "      <th>sun_Qy</th>\n",
+       "      <th>sun_Time</th>\n",
+       "      <th>temp</th>\n",
+       "      <th>widdir</th>\n",
+       "      <th>wind</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>2018-01-01</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>23.1</td>\n",
+       "      <td>5.3</td>\n",
+       "      <td>-1.2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.9</td>\n",
+       "      <td>None</td>\n",
+       "      <td>210852A001</td>\n",
+       "      <td>강릉시 연곡면</td>\n",
+       "      <td>11.6</td>\n",
+       "      <td>532</td>\n",
+       "      <td>1.6</td>\n",
+       "      <td>271.4</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  condens_Time        date gr_Temp   hum max_Temp min_Temp no rain soil_Temp  \\\n",
+       "0            0  2018-01-01     1.4  23.1      5.3     -1.2  1    0       1.9   \n",
+       "\n",
+       "  soil_Wt    stn_Code stn_Name sun_Qy sun_Time temp widdir wind  \n",
+       "0    None  210852A001  강릉시 연곡면   11.6      532  1.6  271.4    4  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['condens_Time', 'date', 'gr_Temp', 'hum', 'max_Temp', 'min_Temp', 'no', 'rain', 'soil_Temp', 'soil_Wt', 'stn_Code', 'stn_Name', 'sun_Qy', 'sun_Time', 'temp', 'widdir', 'wind']\n",
+      "['stn_Code', 'stn_Name', 'date', 'temp', 'max_Temp', 'min_Temp', 'hum', 'widdir', 'wind', 'rain', 'sun_Time', 'sun_Qy', 'condens_Time', 'gr_Temp', 'soil_Temp', 'soil_Wt']\n"
      ]
     }
    ],
    "source": [
     "# api test\n",
-    "\n",
-    "url = 'http://apis.data.go.kr/1390802/AgriWeather/WeatherObsrInfo/GnrlWeather/getWeatherYearDayList'\n",
-    "params ={'serviceKey' : authkey, 'Page_No' : '1', 'Page_Size' : '20', 'search_Year' : '2018', 'obsr_Spot_Code' : '210852A001' }\n",
+    "url = \"http://apis.data.go.kr/1390802/AgriWeather/WeatherObsrInfo/GnrlWeather/getWeatherYearDayList\"\n",
+    "params = {\n",
+    "    \"serviceKey\": authkey,\n",
+    "    \"Page_No\": \"1\",\n",
+    "    \"Page_Size\": \"20\",\n",
+    "    \"search_Year\": \"2018\",\n",
+    "    \"obsr_Spot_Code\": \"210852A001\",\n",
+    "}\n",
     "\n",
     "time.sleep(0.2)\n",
     "response = requests.get(url, params=params)\n",
@@ -542,12 +667,112 @@
     "\n",
     "    parsed_dict = xmltodict.parse(str(soup))\n",
     "\n",
-    "display(pd.DataFrame(parsed_dict).T.reset_index(drop=True))\n",
-    "print(pd.DataFrame(parsed_dict).T.columns.to_list())\n",
+    "    display(pd.DataFrame(parsed_dict).T.reset_index(drop=True))\n",
+    "    print(pd.DataFrame(parsed_dict).T.columns.to_list())\n",
     "\n",
-    "columns = list(parsed_dict[\"item\"].keys())\n",
-    "columns.remove(\"no\")\n",
-    "print(columns)"
+    "    columns = list(parsed_dict[\"item\"].keys())\n",
+    "    columns.remove(\"no\")\n",
+    "    print(columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [4], line 27\u001b[0m\n\u001b[0;32m     22\u001b[0m             df_new \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mDataFrame(temp_dict)\u001b[39m.\u001b[39mT\n\u001b[0;32m     24\u001b[0m         \u001b[39mreturn\u001b[39;00m df\u001b[39m.\u001b[39mappend(df_new, ignore_index\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m)[columns]\n\u001b[1;32m---> 27\u001b[0m display(Get_AgriWeather(authkey\u001b[39m=\u001b[39;49mauthkey, columns\u001b[39m=\u001b[39;49mcolumns, Page_No\u001b[39m=\u001b[39;49m\u001b[39m1\u001b[39;49m, search_Year\u001b[39m=\u001b[39;49m\u001b[39m2018\u001b[39;49m, obsr_Spot_Code\u001b[39m=\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39m210852A001\u001b[39;49m\u001b[39m\"\u001b[39;49m))\n",
+      "Cell \u001b[1;32mIn [4], line 15\u001b[0m, in \u001b[0;36mGet_AgriWeather\u001b[1;34m(authkey, columns, Page_No, search_Year, obsr_Spot_Code)\u001b[0m\n\u001b[0;32m     12\u001b[0m df \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mDataFrame()\n\u001b[0;32m     14\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39m0\u001b[39m,\u001b[39m100\u001b[39m):\n\u001b[1;32m---> 15\u001b[0m     s \u001b[39m=\u001b[39m soup[i]\n\u001b[0;32m     16\u001b[0m     temp_dict \u001b[39m=\u001b[39m {\u001b[39m\"\u001b[39m\u001b[39mtemp\u001b[39m\u001b[39m\"\u001b[39m: {}}\n\u001b[0;32m     18\u001b[0m     \u001b[39mfor\u001b[39;00m j \u001b[39min\u001b[39;00m columns:\n",
+      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
+     ]
+    }
+   ],
+   "source": [
+    "def Get_df_AgriWeather(authkey, Page_No, search_Year, obsr_Spot_Code):\n",
+    "\n",
+    "    url = \"http://apis.data.go.kr/1390802/AgriWeather/WeatherObsrInfo/GnrlWeather/getWeatherYearDayList\"\n",
+    "    params = {\n",
+    "        \"serviceKey\": authkey,\n",
+    "        \"Page_No\": Page_No,\n",
+    "        \"Page_Size\": \"100\",\n",
+    "        \"search_Year\": search_Year,\n",
+    "        \"obsr_Spot_Code\": obsr_Spot_Code,\n",
+    "    }\n",
+    "\n",
+    "    # API\n",
+    "    time.sleep(0.2)\n",
+    "    response = requests.get(url, params)\n",
+    "\n",
+    "    if response.status_code == 200:\n",
+    "        soup = BeautifulSoup(response.text, \"xml\")\n",
+    "        soup = soup.find_all(\"item\")\n",
+    "        s = soup[-1]\n",
+    "\n",
+    "        col = xmltodict.parse(str(soup))\n",
+    "        col = list(col[\"item\"].keys())\n",
+    "    \n",
+    "        # return\n",
+    "        df = pd.DataFrame()\n",
+    "\n",
+    "        \n",
+    "        no = s.find(\"no\").get_text()\n",
+    "        if no >= 301:\n",
+    "            roof_size = (no % 100)\n",
+    "        else:\n",
+    "            roof_size = 100\n",
+    "\n",
+    "        for i in range(0, roof_size):\n",
+    "            s = soup[i]\n",
+    "            temp_dict = {\"temp\": {}}\n",
+    "\n",
+    "            for j in col:\n",
+    "                v = s.find(j).get_text()\n",
+    "                temp_dict[\"temp\"][j] = v\n",
+    "\n",
+    "            df_new = pd.DataFrame(temp_dict).T\n",
+    "\n",
+    "        df = pd.concat([df, df_new])\n",
+    "\n",
+    "        return df\n",
+    "    \n",
+    "    else:\n",
+    "        print(response.status_code)\n",
+    "        return response.status_code\n",
+    "\n",
+    "\n",
+    "display(\n",
+    "    Get_df_AgriWeather(\n",
+    "        authkey=authkey,\n",
+    "        columns=columns,\n",
+    "        Page_No=1,\n",
+    "        search_Year=2018,\n",
+    "        obsr_Spot_Code=\"210852A001\",\n",
+    "    )\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (551244640.py, line 30)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"C:\\Users\\sdy59\\AppData\\Local\\Temp\\ipykernel_13908\\551244640.py\"\u001b[1;36m, line \u001b[1;32m30\u001b[0m\n\u001b[1;33m    for\u001b[0m\n\u001b[1;37m        ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "def Get_df_PeriodAgriWeather(authkey=authkey, search_Year, obsr_Spot_Code):"
    ]
   },
   {
@@ -555,88 +780,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def Get_AgriWeather(authkey, columns, Page_No, search_Year, obsr_Spot_Code):\n",
-    "    \n",
-    "        url = f'http://apis.data.go.kr/1390802/AgriWeather/WeatherObsrInfo/GnrlWeather/getWeatherYearDayList?serviceKey={authkey}&Page_No={Page_No}&Page_Size=100&search_Year={search_Year}&obsr_Spot_Code={obsr_Spot_Code}'\n",
-    "\n",
-    "        time.sleep(0.2)\n",
-    "        response = requests.get(url)\n",
-    "        \n",
-    "        if response.status_code == 200:\n",
-    "            soup = BeautifulSoup(response.text, 'xml')\n",
-    "            soup = soup.find_all(\"item\")\n",
-    "\n",
-    "        df = pd.DataFrame()\n",
-    "\n",
-    "        for i in range(0,100):\n",
-    "            s = soup[i]\n",
-    "            temp_dict = {\"temp\": {}}\n",
-    "\n",
-    "            for j in columns:\n",
-    "                v = s.find(j).get_text()\n",
-    "                temp_dict[\"temp\"][j] = v\n",
-    "\n",
-    "            df_new = pd.DataFrame(temp_dict).T\n",
-    "\n",
-    "        return df.append(df_new, ignore_index=True)[columns]\n",
-    "\n",
-    "\n",
-    "display(Get_AgriWeather(authkey=authkey, columns=columns, Page_No=1, search_Year=2018, obsr_Spot_Code=\"210852A001\"))"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[1]"
-      ]
-     },
-     "execution_count": 71,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "def Get_All_AgriWeather(authkey=authkey, columns=columns, search_Year=(2005, 2020), obsr_Spot_Code=\"210852A001\"):\n",
-    "\n",
-    "    def Get_AgriWeather(authkey, columns, Page_No, search_Year, obsr_Spot_Code):\n",
-    "        \n",
-    "            url = f'http://apis.data.go.kr/1390802/AgriWeather/WeatherObsrInfo/GnrlWeather/getWeatherYearDayList?serviceKey={authkey}&Page_No={Page_No}&Page_Size=100&search_Year={search_Year}&obsr_Spot_Code={obsr_Spot_Code}'\n",
-    "\n",
-    "            time.sleep(0.2)\n",
-    "            response = requests.get(url)\n",
-    "            \n",
-    "            if response.status_code == 200:\n",
-    "                soup = BeautifulSoup(response.text, 'xml')\n",
-    "                soup = soup.find_all(\"item\")\n",
-    "\n",
-    "            df = pd.DataFrame()\n",
-    "\n",
-    "            for i in range(0,100):\n",
-    "                s = soup[i]\n",
-    "                temp_dict = {\"temp\": {}}\n",
-    "\n",
-    "                for j in columns:\n",
-    "                    v = s.find(j).get_text()\n",
-    "                    temp_dict[\"temp\"][j] = v\n",
-    "\n",
-    "                df_new = pd.DataFrame(temp_dict).T\n",
-    "\n",
-    "            return df.append(df_new, ignore_index=True)[columns]\n",
-    "    \n",
-    "    for year in range(search_Year[0], search_Year[1]+1):\n",
-    "         \n",
-    "         Get_AgriWeather\n",
-    "\n",
-    "\n",
-    "         \n",
-    "    "
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
