--- a/Data Analysis/Product_price_finder copy.ipynb
+++ b/Data Analysis/Product_price_finder copy.ipynb
@@ -2,7 +2,74 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "col_detail={\n",
+    "\"prce_reg_ymd\" : \"가격등록일자\",\n",
+    "- mrkt_esnt_no : 시장고유번호\n",
+    "- mrkt_code : 시장코드\n",
+    "- mrkt_nm : 시장명\n",
+    "- ctnp_code : 시도코드\n",
+    "- ctnp_nm : 시도명\n",
+    "- sggu_code : 시군구코드\n",
+    "- sggu_nm : 시군구명\n",
+    "- pdlt_code : 품목코드\n",
+    "- pdlt_nm : 품목명\n",
+    "- spcs_code : 품종코드\n",
+    "- spcs_nm : 품종명\n",
+    "- wsrt_exmn_se_code : 도소매조사구분코드\n",
+    "- exmn_se_nm : 조사구분명\n",
+    "- bulk_grad_code : 산물등급코드\n",
+    "- bulk_grad_nm : 산물등급명\n",
+    "- pdlt_prce : 품목가격\n",
+    "- mtc_smt_unit_mg : 산지출하단위크기\n",
+    "- mtc_smt_unit_nm : 산지출하단위명\n",
+    "- whsl_smt_unit_mg : 도매출하단위크기\n",
+    "- whsl_smt_unit_nm : 도매출하단위명\n",
+    "- rtsl_smt_unit_mg : 소매출하단위크기\n",
+    "- rtsl_smt_unit_nm : 소매출하단위명\n",
+    "- evfd_fmpd_smt_unit_mg : 친환경농산물출하단위크기\n",
+    "- evfd_fmpd_smt_unit_nm : 친환경농산물출하단위명\n",
+    "- dcnt_prce_yn : 할인가격여부\n",
+    "- etl_ldg_dt : ETL적재일시\n",
+    "}"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Product Price finder\n",
+    "\n",
+    "## 농수산물\n",
+    "\n",
+    "\n",
+    "- Data Source : [농식품 빅데이터 거래소](https://kadx.co.kr/product/detail/94534d90-595d-11eb-acdd-9560621d9652)\n",
+    "\n",
+    "- Collection Method : Download\n",
+    "\n",
+    "- Data Format : CSV\n",
+    "\n",
+    "### 데이터 설명\n",
+    "\n",
+    "- 일반농산물 도매 69품목 116품종, 소매 90품목 143품종 및 친환경농산물 38품목 44종 대상 가격 자료\n",
+    "\n",
+    "### 컬럼 설명"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,50 +78,31 @@
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "import koreanize_matplotlib\n",
-    "%config InlineBackend.figure_format = 'retina'"
+    "%config InlineBackend.figure_format = 'retina'\n",
+    "\n",
+    "\n",
+    "root_path = \"../\"\n",
+    "data_path = f\"{root_path}data\""
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 파일 호출, 변수명 및 불러오기 경로는 자신에게 맞게 변경해주시면 됩니다."
+    "# 데이터 정보\n",
+    "\n",
+    "파일 호출, 변수명 및 불러오기 경로는 자신에게 맞게 변경해주시면 됩니다."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['TB_TAT_KAMIS_PRC_MK_TB-2005.csv',\n",
-       " 'TB_TAT_KAMIS_PRC_MK_TB-2006.csv',\n",
-       " 'TB_TAT_KAMIS_PRC_MK_TB-2007.csv',\n",
-       " 'TB_TAT_KAMIS_PRC_MK_TB-2008.csv',\n",
-       " 'TB_TAT_KAMIS_PRC_MK_TB-2009.csv',\n",
-       " 'TB_TAT_KAMIS_PRC_MK_TB-2010.csv',\n",
-       " 'TB_TAT_KAMIS_PRC_MK_TB-2011.csv',\n",
-       " 'TB_TAT_KAMIS_PRC_MK_TB-2012.csv',\n",
-       " 'TB_TAT_KAMIS_PRC_MK_TB-2013.csv',\n",
-       " 'TB_TAT_KAMIS_PRC_MK_TB-2014.csv',\n",
-       " 'TB_TAT_KAMIS_PRC_MK_TB-2015.csv',\n",
-       " 'TB_TAT_KAMIS_PRC_MK_TB-2016.csv',\n",
-       " 'TB_TAT_KAMIS_PRC_MK_TB-2017.csv',\n",
-       " 'TB_TAT_KAMIS_PRC_MK_TB-2018.csv',\n",
-       " 'TB_TAT_KAMIS_PRC_MK_TB-2019.csv',\n",
-       " 'TB_TAT_KAMIS_PRC_MK_TB-2020.csv']"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
-    "os.listdir('data')"
+    "os.listdir(data_path)"
    ]
   },
   {
@@ -457,9 +505,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "asdasdasd"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
