--- a/Data Collection/FmlandWthrInfo.ipynb
+++ b/Data Collection/FmlandWthrInfo.ipynb
@@ -5,72 +5,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# AgriWeather\n",
+    "# FmlandWthrInfo\n",
     "\n",
-    "## 관측지점정보\n",
+    "## 기상청_작물별 농업주산지 상세날씨 조회서비스\n",
     "\n",
-    "- 주의사항 : 모든 관측지점정보가 있는 것은 아님. ex) 강릉시 연곡면, 210852A001\n",
+    "- 주의사항 : \n",
     "\n",
-    "- Data Source : [관측지점정보 - 농업기상정보](https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUKEwjh9Iz52I38AhVDEIgKHWFJDNMQFnoECA4QAQ&url=http%3A%2F%2Fweather.rda.go.kr%2Fw%2Fweather%2FobservationInfo.do&usg=AOvVaw2YyGtn4LBYHLzmmtv-AsXB)\n",
+    "- Data Source : [기상청_작물별 농업주산지 상세날씨 조회서비스 - 일통계조회](https://www.data.go.kr/data/15059518/openapi.do)\n",
     "\n",
-    "- Collection Method : Download\n",
+    "- Collection Method : API_REST\n",
     "\n",
-    "- Data Format : CSV\n",
-    "\n",
-    "### 데이터 설명\n",
-    "\n",
-    "- '**농업기상 기본 관측데이터 조회**'에 활용할 '**관측지점코드**'를 얻기 위함.\n",
-    "\n",
-    "---\n",
-    "\n",
-    "## 농촌진흥청 국립농업과학원\\_농업기상 기본 관측데이터 조회\n",
-    "\n",
-    "- Data Source : [농촌진흥청 국립농업과학원\\_농업기상 기본 관측데이터 조회](https://www.data.go.kr/data/15078057/openapi.do) → 농업기상 조회년도별 일 기본 관측데이터\n",
-    "\n",
-    "- Collection Method : API\n",
-    "\n",
-    "- Data Format : XML\n",
+    "- Data Format : JSON+XML\n",
     "\n",
     "### 데이터 설명\n",
     "\n",
-    "- 농업기상 관측데이터 (**기온, 습도, 풍향, 풍속, 강수량, 일조시간, 일사량 등**)을 정보를 제공합니다.\n",
-    "\n",
-    "### 요청변수(Request Parameter)\n",
-    "\n",
-    "| 항목명(국문)      | 항목명(영문)   | 항목크기 | 항목구분 | 샘플데이터 | 항목설명                              |\n",
-    "| ----------------- | -------------- | -------- | -------- | ---------- | ------------------------------------- |\n",
-    "| 인증키            | serviceKey     | 100      | 필       | 인증키     | 공공데이터포털에서 발급받은 인증키    |\n",
-    "| 페이지 번호       | Page_No        | 10       | 필       | 1          | 페이지 번호                           |\n",
-    "| 한 페이지 결과 수 | Page_Size      | 10       | 필       | 20         | 한 페이지 결과 수 (1 ~ 100 최대 허용) |\n",
-    "| 관측년도          | search_Year    | 4        | 필       | 2018       | 관측년도                              |\n",
-    "| 관측지점코드      | obsr_Spot_Code | 10       | 필       | 210852A001 | 관측지점코드                          |\n",
-    "\n",
-    "### 출력결과(Response Element)\n",
-    "\n",
-    "| 항목명(국문)      | 항목명(영문) | 항목크기 | 항목구분 | 샘플데이터       | 항목설명                  |\n",
-    "| ----------------- | ------------ | -------- | -------- | ---------------- | ------------------------- |\n",
-    "| 결과코드          | result_Code  | 3        | 필       | 200              | 결과코드                  |\n",
-    "| 결과메세지        | result_Msg   | 50       | 필       | OK               | 결과메시지                |\n",
-    "| 한 페이지 결과 수 | rcdcnt       | 4        | 필       | 20               | 한 페이지 결과 수         |\n",
-    "| 페이지 번호       | page_No      | 4        | 필       | 1                | 페이지 번호               |\n",
-    "| 전체 결과 수      | total_Count  | 4        | 필       | 29117            | 전체 결과 수              |\n",
-    "| 번호              | no           | 10       | 필       | 1                | 데이터 검색결과 정렬 번호 |\n",
-    "| 관측지점코드      | stn_Code     | 10       | 필       | 477802A001       | 관측지점코드              |\n",
-    "| 관측지점명        | stn_Name     | 30       | 필       | 가평군 가평읍    | 관측지점명                |\n",
-    "| 관측시각          | date         | 16       | 필       | 2018-01-01 00:10 | 관측시각                  |\n",
-    "| 기온              | temp         | 12       | 필       | 2.1              | 기온(℃)                   |\n",
-    "| 최고기온          | max_Temp     | 12       | 필       | -1.9             | 최고기온(℃)               |\n",
-    "| 최저기온          | min_Temp     | 12       | 필       | -2.5             | 최저기온(℃)               |\n",
-    "| 습도              | hum          | 12       | 필       | 41.6             | 습도(%)                   |\n",
-    "| 풍향              | widdir       | 12       | 필       | 172.8            | 풍향                      |\n",
-    "| 풍속              | wind         | 12       | 필       | 1                | 풍속(m/s)                 |\n",
-    "| 강수량            | rain         | 12       | 필       | 0                | 강수량(mm)                |\n",
-    "| 일조시간          | sun_Time     | 12       | 필       | 227              | 일조시간(MM)              |\n",
-    "| 일사량            | sun_Qy       | 12       | 필       | 0                | 일사량(MJ/m²)             |\n",
-    "| 결로시간          | condens_Time | 12       | 필       | 0                | 결로시간(MM)              |\n",
-    "| 초상온도          | gr_Temp      | 12       | 필       | -3.8             | 초상온도(℃)               |\n",
-    "| 지중온도          | soil_Temp    | 12       | 필       | -0.6             | 지중온도(℃)               |\n",
-    "| 토양수분보정값    | soil_Wt      | 12       | 필       | 13               | 토양수분보정값(%)         |\n"
+    "- 농작물(36종) 주산지의 현재 날씨 및 동네예보 정보와 과거날씨 통계(일별, 순별, 월별) 정보 제공"
    ]
   },
   {
@@ -117,7 +66,16 @@
     "sys.path.append(\"../Import\")\n",
     "import auth\n",
     "\n",
-    "authkey = auth.authkey[\"AgriWeather_dec\"]"
+    "authkey = auth.authkey[\"FmlandWthrInfo_dec\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 작물별_농업주산지_상세날씨_조회서비스__지역코드_22.05"
    ]
   },
   {
@@ -461,6 +419,55 @@
    "metadata": {},
    "source": [
     "## Get_ObsrSpotCode"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "'강릉시 연곡면' cannot be found in dataframe.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [100], line 9\u001b[0m, in \u001b[0;36mGet_ObsrSpotCodeAdress\u001b[1;34m(dataframe, obsr_Spot_Name)\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[0;32m      8\u001b[0m     \u001b[39m# '도명+지점명'과 '지점명'의 중복 여부 확인했을 때, 중복이 없다는 전제로 슬라이싱을 활용함.\u001b[39;00m\n\u001b[1;32m----> 9\u001b[0m     ObsrSpotCode \u001b[39m=\u001b[39m dataframe[\n\u001b[0;32m     10\u001b[0m         (dataframe[\u001b[39m\"\u001b[39;49m\u001b[39m도명+지점명\u001b[39;49m\u001b[39m\"\u001b[39;49m] \u001b[39m==\u001b[39;49m obsr_Spot_Name)\n\u001b[0;32m     11\u001b[0m         \u001b[39m|\u001b[39;49m (dataframe[\u001b[39m\"\u001b[39;49m\u001b[39m지점명\u001b[39;49m\u001b[39m\"\u001b[39;49m] \u001b[39m==\u001b[39;49m obsr_Spot_Name)\n\u001b[0;32m     12\u001b[0m         \u001b[39m|\u001b[39;49m (dataframe[\u001b[39m\"\u001b[39;49m\u001b[39m지점코드\u001b[39;49m\u001b[39m\"\u001b[39;49m] \u001b[39m==\u001b[39;49m obsr_Spot_Name)    \u001b[39m# 지점명 대신에 코드를 입력하는 실수를 고려함\u001b[39;49;00m\n\u001b[0;32m     13\u001b[0m     ][[\u001b[39m\"\u001b[39;49m\u001b[39m지점코드\u001b[39;49m\u001b[39m\"\u001b[39;49m, \u001b[39m\"\u001b[39;49m\u001b[39m설치주소\u001b[39;49m\u001b[39m\"\u001b[39;49m]]\u001b[39m.\u001b[39;49mvalues[\u001b[39m0\u001b[39;49m]\n\u001b[0;32m     15\u001b[0m     \u001b[39mreturn\u001b[39;00m ObsrSpotCode\n",
+      "\u001b[1;31mIndexError\u001b[0m: index 0 is out of bounds for axis 0 with size 0",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [100], line 20\u001b[0m\n\u001b[0;32m     17\u001b[0m         \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m'\u001b[39m\u001b[39m{\u001b[39;00mobsr_Spot_Name\u001b[39m}\u001b[39;00m\u001b[39m'\u001b[39m\u001b[39m cannot be found in dataframe.\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m     19\u001b[0m \u001b[39m# fnc test\u001b[39;00m\n\u001b[1;32m---> 20\u001b[0m fnc \u001b[39m=\u001b[39m Get_ObsrSpotCodeAdress(dataframe\u001b[39m=\u001b[39;49mdf_ObsrSpot, obsr_Spot_Name\u001b[39m=\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39m강릉시 연곡면\u001b[39;49m\u001b[39m\"\u001b[39;49m)\n\u001b[0;32m     21\u001b[0m code \u001b[39m=\u001b[39m fnc[\u001b[39m0\u001b[39m]\n\u001b[0;32m     22\u001b[0m adress \u001b[39m=\u001b[39m fnc[\u001b[39m1\u001b[39m]\n",
+      "Cell \u001b[1;32mIn [100], line 17\u001b[0m, in \u001b[0;36mGet_ObsrSpotCodeAdress\u001b[1;34m(dataframe, obsr_Spot_Name)\u001b[0m\n\u001b[0;32m     15\u001b[0m     \u001b[39mreturn\u001b[39;00m ObsrSpotCode\n\u001b[0;32m     16\u001b[0m \u001b[39mexcept\u001b[39;00m:\n\u001b[1;32m---> 17\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m'\u001b[39m\u001b[39m{\u001b[39;00mobsr_Spot_Name\u001b[39m}\u001b[39;00m\u001b[39m'\u001b[39m\u001b[39m cannot be found in dataframe.\u001b[39m\u001b[39m\"\u001b[39m)\n",
+      "\u001b[1;31mValueError\u001b[0m: '강릉시 연곡면' cannot be found in dataframe."
+     ]
+    }
+   ],
+   "source": [
+    "def Get_ObsrSpotCodeAdress(dataframe, obsr_Spot_Name) -> str:\n",
+    "\n",
+    "    \"\"\"\n",
+    "    매개변수 'dataframe'에서 column '도명+지점명', '지점명', '설치주소' 중에서\n",
+    "    매개변수 'obsr_Spot_Name'과 일치하는 row의 '지점코드'column의 value를 반환하는 함수\n",
+    "    \"\"\"\n",
+    "    try:\n",
+    "        # '도명+지점명'과 '지점명'의 중복 여부 확인했을 때, 중복이 없다는 전제로 슬라이싱을 활용함.\n",
+    "        ObsrSpotCode = dataframe[\n",
+    "            (dataframe[\"도명+지점명\"] == obsr_Spot_Name)\n",
+    "            | (dataframe[\"지점명\"] == obsr_Spot_Name)\n",
+    "            | (dataframe[\"지점코드\"] == obsr_Spot_Name)  # 지점명 대신에 코드를 입력하는 실수를 고려함\n",
+    "        ][[\"지점코드\", \"설치주소\"]].values[0]\n",
+    "\n",
+    "        return ObsrSpotCode\n",
+    "    except:\n",
+    "        raise ValueError(f\"'{obsr_Spot_Name}' cannot be found in dataframe.\")\n",
+    "\n",
+    "\n",
+    "# fnc test\n",
+    "fnc = Get_ObsrSpotCodeAdress(dataframe=df_ObsrSpot, obsr_Spot_Name=\"강릉시 연곡면\")\n",
+    "code = fnc[0]\n",
+    "adress = fnc[1]\n",
+    "print(code, adress)"
    ]
   },
   {
@@ -1112,7 +1119,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8 | packaged by conda-forge | (main, Nov 22 2022, 08:16:53) [MSC v.1929 64 bit (AMD64)]"
+   "version": "3.10.8"
   },
   "orig_nbformat": 4,
   "vscode": {
